# MultiScaleNLM

./: CMakeLists.txt  UnbiasedNonLocalMeans_Compare.cxx  itkEigenValueImageFilter.h  itkGeneralEigenValueFunctor.h  itkMultiScaleGaussianEnhancementImageFilter.hxx  itkNLMFilter.txx  itkUnaryFunctorBase.h
BuildScripts/.svn/: entries
LSDerivatives/.svn/: all-wcprops
SlicerExecutionModel/GenerateCLP/.svn/: all-wcprops  entries
SlicerExecutionModel/ModuleDescriptionParser/CMake/.svn/: all-wcprops  entries
SlicerExecutionModel/tclap/.svn/: all-wcprops
SlicerExecutionModel/tclap/config/.svn/: all-wcprops
SlicerExecutionModel/tclap/include/.svn/: all-wcprops
SlicerExecutionModel/tclap/include/tclap/.svn/: all-wcprops  entries
TestData/.svn/: all-wcprops
UnbiasedNonLocalMeans-Hessian/Source/: UnbiasedNonLocalMeans.cxx  UnbiasedNonLocalMeans.xml  itkEigenValueFunctor.h  itkGaussianEnhancementImageFilter.h  itkGaussianEnhancementImageFilter.hxx  itkGeneralEigenValueFunctor.h  itkGenerateScalesOutput.h  itkGenerateScalesOutput.hxx  itkMultiScaleGaussianEnhancementImageFilter.h  itkMultiScaleGaussianEnhancementImageFilter.hxx  itkNLMFilter.h  itkNLMFilter.txx  prova.h  prova.txx
UnbiasedNonLocalMeans-Hessian/Source/.svn/: all-wcprops  entries
UnbiasedNonLocalMeans-Hessian/Source/.svn/text-base/: UnbiasedNonLocalMeans.cxx.svn-base  UnbiasedNonLocalMeans.xml.svn-base  itkNLMFilter.h.svn-base  itkNLMFilter.txx.svn-base
UnbiasedNonLocalMeans-Hessian/Source/BuildScripts/.svn/: all-wcprops
UnbiasedNonLocalMeans-Hessian/Source/LSDerivatives/: itkLSDerivatives.h  itkLSDerivatives.txx
UnbiasedNonLocalMeans-Hessian/Source/LSDerivatives/.svn/: entries
UnbiasedNonLocalMeans-Hessian/Source/SlicerExecutionModel/.svn/: all-wcprops  entries
UnbiasedNonLocalMeans-Hessian/Source/SlicerExecutionModel/ModuleDescriptionParser/.svn/: all-wcprops  entries
UnbiasedNonLocalMeans-Hessian/Source/SlicerExecutionModel/tclap/.svn/: entries
UnbiasedNonLocalMeans-Hessian/Source/SlicerExecutionModel/tclap/config/.svn/: entries
UnbiasedNonLocalMeans-Hessian/Source/SlicerExecutionModel/tclap/include/.svn/: entries
UnbiasedNonLocalMeans-Hessian/Source/TestData/.svn/: entries
UnbiasedNonLocalMeans-Hessian/Source/TestData/.svn/text-base/: t2filtered.nii.gz.svn-base
UnbiasedNonLocalMeans-Hessian/Source/cmpb.source.code/: CMakeLists.txt
UnbiasedNonLocalMeans-Hessian/Source/cmpb.source.code/.svn/: all-wcprops
UnbiasedNonLocalMeans-Hessian/Source/cmpb.source.code/NLM/: CMakeLists.txt  NLM.cxx
UnbiasedNonLocalMeans-Hessian/Source/cmpb.source.code/NLM/.svn/: all-wcprops  entries
UnbiasedNonLocalMeans-Hessian/Source/cmpb.source.code/PFNLM/: PFNLM.cxx  itkNLMFilter.h
UnbiasedNonLocalMeans-Hessian/Source/cmpb.source.code/PFNLM/.svn/: all-wcprops
UnbiasedNonLocalMeans-Hessian/Source/cmpb.source.code/PFNLM/LSDerivatives/.svn/: all-wcprops  entries
cmpb.source.code/: README
cmpb.source.code/.svn/: entries
cmpb.source.code/NLM/: itkNLMFilter.h  itkNLMFilter.txx
cmpb.source.code/PFNLM/.svn/: entries
cmpb.source.code/PFNLM/.svn/text-base/: CMakeLists.txt.svn-base  itkNLMFilter.txx.svn-base
