PROJECT(NLM)
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR "ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)
if(ITK_VERSION_MAJOR LESS 4)
    set(ITK_LIBRARIES ITKIO ITKNumerics ITKCommon ITKStatistics ITKAlgorithms ITKBasicFilters)
endif(ITK_VERSION_MAJOR LESS 4)
ADD_EXECUTABLE(NLM NLM.cxx itkNLMFilter.txx)
TARGET_LINK_LIBRARIES(NLM ${ITK_LIBRARIES})
